src-tauri/src/mcp/snapshots/agaric_lib__mcp__tools_ro__tests__tool_response_journal_for_date.snap
---
source: src/mcp/tools_ro.rs
assertion_line: 1910
expression: result
---
block_type: page
conflict_type: ~
content: 2025-09-09
deleted_at: ~
due_date: ~
id: "[ULID]"
is_conflict: false
page_id: "[ULID]"
parent_id: ~
position: 2
priority: ~
scheduled_date: ~
todo_state: ~
