src-tauri/src/mcp/snapshots/agaric_lib__mcp__tools_ro__tests__tool_response_list_backlinks.snap
---
source: src/mcp/tools_ro.rs
expression: result
---
filtered_count: 0
groups: []
has_more: false
next_cursor: "[CURSOR]"
total_count: 0
truncated: false
